--- a/apps/contacts/app/index.css
+++ b/apps/contacts/app/index.css
@@ -8,8 +8,9 @@ html {
 }
 
 body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
-        "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+    font-family:
+        -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
+        "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -33,7 +34,9 @@ button {
     border: none;
     border-radius: 8px;
     padding: 0.5rem 0.75rem;
-    box-shadow: 0 0px 1px hsla(0, 0%, 0%, 0.2), 0 1px 2px hsla(0, 0%, 0%, 0.2);
+    box-shadow:
+        0 0px 1px hsla(0, 0%, 0%, 0.2),
+        0 1px 2px hsla(0, 0%, 0%, 0.2);
     background-color: white;
     line-height: 1.5;
     margin: 0;
@@ -47,7 +50,9 @@ button {
 textarea:hover,
 input:hover,
 button:hover {
-    box-shadow: 0 0px 1px hsla(0, 0%, 0%, 0.6), 0 1px 2px hsla(0, 0%, 0%, 0.2);
+    box-shadow:
+        0 0px 1px hsla(0, 0%, 0%, 0.6),
+        0 1px 2px hsla(0, 0%, 0%, 0.2);
 }
 
 button:active {
@@ -128,7 +133,7 @@ form[action$="destroy"] button {
 }
 
 #sidebar h1::before {
-    content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' style='color:black;' x-comp='Wordmark' height='24' viewBox='0 0 140 165' fill='none' aria-hidden='true'%3E%3Ctitle%3ERemix Logo%3C/title%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M133.85 124.16C135.3 142.762 135.3 151.482 135.3 161H92.2283C92.2283 158.927 92.2653 157.03 92.3028 155.107C92.4195 149.128 92.5411 142.894 91.5717 130.304C90.2905 111.872 82.3473 107.776 67.7419 107.776H54.8021H0V74.24H69.7918C88.2407 74.24 97.4651 68.632 97.4651 53.784C97.4651 40.728 88.2407 32.816 69.7918 32.816H0V0H77.4788C119.245 0 140 19.712 140 51.2C140 74.752 125.395 90.112 105.665 92.672C122.32 96 132.057 105.472 133.85 124.16Z' fill='currentColor' /%3E%3Cpath d='M0 161V136H45.5416C53.1486 136 54.8003 141.638 54.8003 145V161H0Z' fill='currentColor' /%3E%3Cdefs%3E%3ClinearGradient id='paint0_linear' x1='591.052' y1='47.1035' x2='591.052' y2='161.28' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='currentColor' /%3E%3Cstop offset='1' stop-color='currentColor' stop-opacity='0' /%3E%3C/linearGradient%3E%3ClinearGradient id='paint1_linear' x1='203.19' y1='44.0317' x2='203.19' y2='164.352' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='currentColor' /%3E%3Cstop offset='1' stop-color='currentColor' stop-opacity='0' /%3E%3C/linearGradient%3E%3ClinearGradient id='paint2_linear' x1='368.744' y1='44.0317' x2='368.744' y2='161.28' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='currentColor' /%3E%3Cstop offset='1' stop-color='currentColor' stop-opacity='0' /%3E%3C/linearGradient%3E%3ClinearGradient id='paint3_linear' x1='499.172' y1='0' x2='499.172' y2='161.28' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='currentColor' /%3E%3Cstop offset='1' stop-color='currentColor' stop-opacity='0' /%3E%3C/linearGradient%3E%3C/defs%3E%3C/svg%3E");
+    content: url("data:image/svg+xml,%3Csvg width='25' height='18' viewBox='0 0 25 18' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M19.4127 6.4904C18.6984 6.26581 18.3295 6.34153 17.5802 6.25965C16.4219 6.13331 15.9604 5.68062 15.7646 4.51554C15.6551 3.86516 15.7844 2.9129 15.5048 2.32334C14.9699 1.19921 13.7183 0.695046 12.461 0.982805C11.3994 1.22611 10.516 2.28708 10.4671 3.37612C10.4112 4.61957 11.1197 5.68054 12.3363 6.04667C12.9143 6.22097 13.5284 6.3087 14.132 6.35315C15.2391 6.43386 15.3241 7.04923 15.6236 7.55574C15.8124 7.87508 15.9954 8.18975 15.9954 9.14193C15.9954 10.0941 15.8112 10.4088 15.6236 10.7281C15.3241 11.2334 14.9547 11.5645 13.8477 11.6464C13.244 11.6908 12.6288 11.7786 12.0519 11.9528C10.8353 12.3201 10.1268 13.3799 10.1828 14.6234C10.2317 15.7124 11.115 16.7734 12.1766 17.0167C13.434 17.3056 14.6855 16.8003 15.2204 15.6762C15.5013 15.0866 15.6551 14.4187 15.7646 13.7683C15.9616 12.6032 16.423 12.1505 17.5802 12.0242C18.3295 11.9423 19.1049 12.0242 19.8071 11.6253C20.5491 11.0832 21.212 10.2696 21.212 9.14192C21.212 8.01428 20.4976 6.83197 19.4127 6.4904Z' fill='%23F44250'/%3E%3Cpath d='M7.59953 11.7459C6.12615 11.7459 4.92432 10.5547 4.92432 9.09441C4.92432 7.63407 6.12615 6.44287 7.59953 6.44287C9.0729 6.44287 10.2747 7.63407 10.2747 9.09441C10.2747 10.5536 9.07172 11.7459 7.59953 11.7459Z' fill='black'/%3E%3Cpath d='M2.64217 17.0965C1.18419 17.093 -0.0034949 15.8971 7.72743e-06 14.4356C0.00352588 12.9765 1.1994 11.7888 2.66089 11.7935C4.12004 11.797 5.30772 12.9929 5.30306 14.4544C5.29953 15.9123 4.10366 17.1 2.64217 17.0965Z' fill='black'/%3E%3Cpath d='M22.3677 17.0965C20.9051 17.1046 19.7046 15.9217 19.6963 14.4649C19.6882 13.0023 20.8712 11.8017 22.3279 11.7935C23.7906 11.7854 24.9911 12.9683 24.9993 14.4251C25.0075 15.8866 23.8245 17.0883 22.3677 17.0965Z' fill='black'/%3E%3C/svg%3E%0A");
     margin-right: 0.5rem;
     padding-right: 0.75rem;
     position: relative;
@@ -276,13 +281,13 @@ i {
     color: hsl(224, 98%, 58%);
 }
 
-#contact a[href*="mastodon"] {
+#contact a[href*="bsky"] {
     display: flex;
     font-size: 1.5rem;
     color: #3992ff;
     text-decoration: none;
 }
-#contact a[href*="mastodon"]:hover {
+#contact a[href*="bsky"]:hover {
     text-decoration: underline;
 }
 
@@ -371,8 +376,7 @@ i {
 #zero-state:before {
     display: block;
     margin-bottom: 0.5rem;
-    opacity: 15%;
-    content: url("data:image/svg+xml,%3Csvg width='50' height='33' xmlns='http://www.w3.org/2000/svg' x-comp='Wordmark' viewBox='0 0 140 165' fill='none' aria-hidden='true'%3E%3Ctitle%3ERemix Logo%3C/title%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M133.85 124.16C135.3 142.762 135.3 151.482 135.3 161H92.2283C92.2283 158.927 92.2653 157.03 92.3028 155.107C92.4195 149.128 92.5411 142.894 91.5717 130.304C90.2905 111.872 82.3473 107.776 67.7419 107.776H54.8021H0V74.24H69.7918C88.2407 74.24 97.4651 68.632 97.4651 53.784C97.4651 40.728 88.2407 32.816 69.7918 32.816H0V0H77.4788C119.245 0 140 19.712 140 51.2C140 74.752 125.395 90.112 105.665 92.672C122.32 96 132.057 105.472 133.85 124.16Z' fill='currentColor' /%3E%3Cpath d='M0 161V136H45.5416C53.1486 136 54.8003 141.638 54.8003 145V161H0Z' fill='currentColor' /%3E%3Cdefs%3E%3ClinearGradient id='paint0_linear' x1='591.052' y1='47.1035' x2='591.052' y2='161.28' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='currentColor' /%3E%3Cstop offset='1' stop-color='currentColor' stop-opacity='0' /%3E%3C/linearGradient%3E%3ClinearGradient id='paint1_linear' x1='203.19' y1='44.0317' x2='203.19' y2='164.352' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='currentColor' /%3E%3Cstop offset='1' stop-color='currentColor' stop-opacity='0' /%3E%3C/linearGradient%3E%3ClinearGradient id='paint2_linear' x1='368.744' y1='44.0317' x2='368.744' y2='161.28' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='currentColor' /%3E%3Cstop offset='1' stop-color='currentColor' stop-opacity='0' /%3E%3C/linearGradient%3E%3ClinearGradient id='paint3_linear' x1='499.172' y1='0' x2='499.172' y2='161.28' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='currentColor' /%3E%3Cstop offset='1' stop-color='currentColor' stop-opacity='0' /%3E%3C/linearGradient%3E%3C/defs%3E%3C/svg%3E");
+    content: url("data:image/svg+xml,%3Csvg width='70' height='46' viewBox='0 0 70 46' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_1_7)'%3E%3Cpath d='M54.3567 15.5764C52.3565 14.9503 51.3236 15.1613 49.2255 14.933C45.9822 14.5809 44.6901 13.3187 44.1419 10.0706C43.8351 8.25738 44.1973 5.60256 43.4143 3.95893C41.9166 0.824917 38.4122 -0.580654 34.8915 0.221598C31.9189 0.899925 29.4456 3.85782 29.3086 6.89399C29.1519 10.3606 31.1359 13.3185 34.5423 14.3393C36.1607 14.8252 37.8804 15.0697 39.5704 15.1937C42.6703 15.4188 42.9085 17.1343 43.7471 18.5465C44.2757 19.4368 44.788 20.314 44.788 22.9686C44.788 25.6233 44.2723 26.5005 43.7471 27.3908C42.9085 28.7996 41.8741 29.7226 38.7744 29.9509C37.0842 30.0748 35.3613 30.3193 33.7462 30.8052C30.3397 31.8292 28.3559 34.7839 28.5124 38.2505C28.6495 41.2867 31.1228 44.2446 34.0953 44.9229C37.616 45.7285 41.1204 44.3196 42.6181 41.1856C43.4045 39.542 43.8351 37.6799 44.1419 35.8666C44.6933 32.6185 45.9854 31.3564 49.2255 31.0041C51.3236 30.776 53.495 31.0041 55.461 29.8921C57.5386 28.3806 59.3947 26.1124 59.3947 22.9686C59.3947 19.8249 57.3945 16.5286 54.3567 15.5764Z' fill='%23E3E3E3'/%3E%3Cpath d='M21.2787 30.2281C17.1532 30.2281 13.7881 26.9072 13.7881 22.8359C13.7881 18.7645 17.1532 15.4436 21.2787 15.4436C25.4043 15.4436 28.7696 18.7645 28.7696 22.8359C28.7696 26.9039 25.401 30.2281 21.2787 30.2281Z' fill='%23E3E3E3'/%3E%3Cpath d='M7.39819 45.1457C3.31577 45.1358 -0.00978589 41.8017 2.16372e-05 37.7272C0.00987262 33.6593 3.35838 30.3482 7.45062 30.3611C11.5363 30.3709 14.8618 33.7049 14.8488 37.7795C14.8389 41.8442 11.4904 45.1554 7.39819 45.1457Z' fill='%23E3E3E3'/%3E%3Cpath d='M62.6304 45.1455C58.535 45.1682 55.1734 41.8702 55.1505 37.8088C55.1277 33.7311 58.4399 30.3841 62.519 30.3611C66.6144 30.3384 69.9759 33.6365 69.999 37.6978C70.0218 41.7723 66.7094 45.1225 62.6304 45.1455Z' fill='%23E3E3E3'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_1_7'%3E%3Crect width='70' height='46' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A");
 }
 
 #error-page {
